2/3rd finished of get started tab

--- a/getStarted.html
+++ b/getStarted.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section class="flex-container">
-            <div class="col-one"><img src="/assets/icon.png" alt="Company Logo"></div>
+            <div class="col-one"><img src="/assets/logo-full.png" alt="Company Logo" class="rounded-img"></div>
             <div class="company-introduction col-two">
                 <h3> Why us? </h3>
                 <p> Empowering Change, One Footprint at a Time: Calculating Ecological Impact, Cultivating Positive Handprints. </p>
@@ -49,31 +49,11 @@
                 stakeholders yadayada
             </div>
             <div class="col-two"><img src="/assets/icon.png" alt="Stakeholders"></div>
-            <div class="col-one"><img src="/assets/icon.png" alt="SDG"></div>
+            <div class="col-one"><img src="/assets/SustainableDevelopmentGoalsLogo.svg.png" alt="SDG" class="smaller-img"></div>
             <div class="col-two">
                 <h3>How we calculate</h3>
                 <p> We calculate using these 12 Sustainable development goals</p>
-                <ol>
-                    <li>No Poverty: End poverty in all its forms everywhere.</li>
-                    <li>Zero Hunger: End hunger, achieve food security and improved nutrition, and promote sustainable agriculture.</li>
-                    <li>Good Health and Well-being: Ensure healthy lives and promote well-being for all at all ages.</li>
-                    <li>Quality Education: Ensure inclusive and equitable quality education and promote lifelong learning opportunities for all.</li>
-                    <li>Gender Equality: Achieve gender equality and empower all women and girls.</li>
-                    <li>Clean Water and Sanitation: Ensure availability and sustainable management of water and sanitation for all.</li>
-                    <li>Affordable and Clean Energy: Ensure access to affordable, reliable, sustainable, and modern energy for all.</li>
-                    <li>Decent Work and Economic Growth: Promote sustained, inclusive, and sustainable economic growth, full and productive employment, and decent work for all.
-                     Industry, Innovation, and Infrastructure: Build resilient infrastructure, promote inclusive and sustainable industrialization, and foster innovation.</li>
-                    <li>Reduced Inequality: Reduce inequality within and among countries.</li>
-                    <li>Sustainable Cities and Communities: Make cities and human settlements inclusive, safe, resilient, and sustainable.</li>
-                    <li>Responsible Consumption and Production: Ensure sustainable consumption and production patterns.</li>
-                    <li>Climate Action: Take urgent action to combat climate change and its impacts.</li>
-                    <li>Life Below Water: Conserve and sustainably use the oceans, seas, and marine resources for sustainable development.</li>
-                    <li>Life on Land: Protect, restore, and promote sustainable use of terrestrial ecosystems, sustainably manage forests, combat desertification,
-                     and halt and reverse land degradation and halt biodiversity loss.</li>
-                    <li>Peace, Justice, and Strong Institutions: Promote peaceful and inclusive societies for sustainable development, provide access to justice for all,
-                     and build effective, accountable, and inclusive institutions at all levels.</li>
-                    <li>Partnerships for the Goals: Strengthen the means of implementation and revitalize the Global Partnership for Sustainable Development.</li>
-                </ol>
+                <img src="/assets/Sustainable_Development_Goals.svg.png" alt="SDG">
                 <a href="calculator.html" class="click-me"> Start calculating! </a>
             </div>
         </section>
