lil bit more content added

--- a/getStarted.html
+++ b/getStarted.html
@@ -24,7 +24,8 @@
             <div class="col-one"><img src="/assets/logo-full.png" alt="Company Logo" class="rounded-img"></div>
             <div class="company-introduction col-two">
                 <h3> Why us? </h3>
-                <p> Empowering Change, One Footprint at a Time: Calculating Ecological Impact, Cultivating Positive Handprints. </p>
+                <p> Empowering Change, One Footprint at a Time: Calculating Ecological Impact, Cultivating Positive
+                    Handprints. </p>
                 Welcome to Crossmarx, where sustainability meets empowerment for a greener world. As stewards of
                 our planet, we understand that every action leaves a lasting imprint.
                 Our user-friendly tools empower individuals and businesses to assess their ecological footprint,
@@ -46,10 +47,31 @@
             <div class="col-one">
                 <h3> Stakeholders</h3>
                 <p> We have 5 stakeholders that we prioritize</p>
-                stakeholders yadayada
+                <ol>
+                <li><em>Staff:</em>
+                Employees vital for operations; their satisfaction boosts productivity and innovation, fostering a
+                positive work environment.</li>
+
+                <li><em>Supplier:</em>
+                Key partners providing resources; collaboration ensures quality materials, ethical practices, and
+                reliable partnerships for sustainable business growth.</li>
+
+                <li><em>Environment:</em>
+                Nature, impacted by business activities. Responsible practices minimize ecological footprint, fostering
+                environmental conservation and sustainability.</li>
+
+                <li><em>Clients:</em>
+                Customers driving business success; meeting needs and expectations builds trust, loyalty, and long-term
+                relationships for mutual benefits.</li>
+
+                <li><em>Owners and Financiers:</em>
+                Investors and financial backers; success enhances returns on investment, making strategic decisions
+                crucial for long-term profitability and business sustainability.</li>
+            </ol>
             </div>
             <div class="col-two"><img src="/assets/icon.png" alt="Stakeholders"></div>
-            <div class="col-one"><img src="/assets/SustainableDevelopmentGoalsLogo.svg.png" alt="SDG" class="smaller-img"></div>
+            <div class="col-one"><img src="/assets/SustainableDevelopmentGoalsLogo.svg.png" alt="SDG"
+                    class="smaller-img"></div>
             <div class="col-two">
                 <h3>How we calculate</h3>
                 <p> We calculate using these 12 Sustainable development goals</p>
