--- a/getStarted.html
+++ b/getStarted.html
@@ -76,8 +76,8 @@
                 <h3>How we calculate</h3>
                 <p> We calculate using these 12 Sustainable development goals</p>
                 <img src="/assets/Sustainable_Development_Goals.svg.png" alt="SDG">
-                <a href="calculator.html" class="click-me"> Start calculating! </a>
             </div>
+            <a href="calculator.html" class="click-me full"> Start calculating! </a>
         </section>
     </main>
 </body>
