--- a/getStarted.html
+++ b/getStarted.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section class="flex-container">
-            <div class="col-one"><img src="/assets/logo-full.png" alt="Company Logo" class="rounded-img"></div>
+            <div class="col-one"><img src="assets/logo-full.png" alt="Company Logo" class="rounded-img"></div>
             <div class="company-introduction col-two">
                 <h3> Why us? </h3>
                 <p> Empowering Change, One Footprint at a Time: Calculating Ecological Impact, Cultivating Positive
@@ -69,13 +69,13 @@
                 crucial for long-term profitability and business sustainability.</li>
             </ol>
             </div>
-            <div class="col-two"><img src="/assets/icon.png" alt="Stakeholders"></div>
-            <div class="col-one"><img src="/assets/SustainableDevelopmentGoalsLogo.svg.png" alt="SDG"
+            <div class="col-two"><img src="assets/icon.png" alt="Stakeholders"></div>
+            <div class="col-one"><img src="assets/SustainableDevelopmentGoalsLogo.svg.png" alt="SDG"
                     class="smaller-img"></div>
             <div class="col-two">
                 <h3>How we calculate</h3>
                 <p> We calculate using these 12 Sustainable development goals</p>
-                <img src="/assets/Sustainable_Development_Goals.svg.png" alt="SDG">
+                <img src="assets/Sustainable_Development_Goals.svg.png" alt="SDG">
             </div>
             <a href="calculator.html" class="click-me full"> Start calculating! </a>
         </section>
