--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
             <ul>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
+                <li> <a href="overview.html">Overview</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
         </nav>
@@ -30,8 +31,8 @@
                 Unlock comprehensive insights, track your environmental impact, and optimize your sustainability
                 strategies with the Crossmarx hand- footprint calculator. Tailored for businesses of all sizes, our user-friendly platform is
                 your key to a greener and more responsible future.
-
                 Why Choose Crossmarx hand- footprint calculator?
+
                 <ol>
                 <li>Comprehensive Insights</li>
                 <li>User-Friendly Interface</li>
