--- a/getStarted.html
+++ b/getStarted.html
@@ -15,6 +15,7 @@
             <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
             <ul>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
+                <li> <a href="overview.html">Overview</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
         </nav>
