--- a/calculator.html
+++ b/calculator.html
@@ -27,7 +27,7 @@
         <section class="questioncard">
             <div class="card" id="card1">
                 <fieldset>
-                    <legend>dit is vraag 5</legend>
+                    <legend>Hoe groot is het CO2 uitstoot van uw bedrijf?</legend>
                     <label><input type="radio" name="1" class="red" id="answer1-1" value="1"> 1</label>
                     <label><input type="radio" name="1" class="orange" id="answer1-2" value="2"> 2</label>
                     <label><input type="radio" name="1" class="yellow" id="answer1-3" value="3"> 3</label>
@@ -37,7 +37,7 @@
             </div>
             <div class="card" id="card2">
                 <fieldset>
-                    <legend>dit is vraag 4</legend>
+                    <legend>Hoe milieuvriendelijk is je leverancier?</legend>
                     <label><input type="radio" name="2" class="red" id="answer2-1" value="1"> 1</label>
                     <label><input type="radio" name="2" class="orange" id="answer2-2" value="2"> 2</label>
                     <label><input type="radio" name="2" class="yellow" id="answer2-3" value="3"> 3</label>
@@ -47,7 +47,7 @@
                 </div>
             <div class="card" id="card3">
                 <fieldset>
-                    <legend>dit is vraag 3</legend>
+                    <legend>In hoeverre is het energie dat gebruikt word in het bedrijf groen?</legend>
                     <label><input type="radio" name="3" class="red" id="answer3-1" value="1"> 1</label>
                     <label><input type="radio" name="3" class="orange" id="answer3-2" value="2"> 2</label>
                     <label><input type="radio" name="3" class="yellow" id="answer3-3" value="3"> 3</label>
@@ -57,7 +57,7 @@
             </div>
             <div class="card" id="card4">
                 <fieldset>
-                    <legend>dit is vraag 2</legend>
+                    <legend>Op een schaal van 1 t/m 5 hoe hoog stel jij milieu vriendelijkheid als prioriteit?</legend>
                     <label><input type="radio" name="4" class="red" id="answer4-1" value="1"> 1</label>
                     <label><input type="radio" name="4" class="orange" id="answer4-2" value="2"> 2</label>
                     <label><input type="radio" name="4" class="yellow" id="answer4-3" value="3"> 3</label>
@@ -67,7 +67,7 @@
             </div>
             <div class="card" id="card5">
                 <fieldset>
-                    <legend>dit is vraag 1</legend>
+                    <legend>Hoe milievriendelijk is jouw bedrijf?</legend>
                     <label><input type="radio" name="5" class="red" id="answer5-1" value="1"> 1</label>
                     <label><input type="radio" name="5" class="orange" id="answer5-2" value="2"> 2</label>
                     <label><input type="radio" name="5" class="yellow" id="answer5-3" value="3"> 3</label>
