--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li>Join Thousands of Businesses Transforming Sustainability</li>
                 </ol>
                 <p>Together, Let's Build a Better Tomorrow!</p>
-                <a href="getStarted.html" class="click-me"> Click me! </a>
+                <a href="getStarted.html" class="click-me"> More information </a>
             </div>
         </section>
     </main>
