--- a/getStarted.html
+++ b/getStarted.html
@@ -38,7 +38,7 @@
                 you're not just calculating; you're actively participating in creating a healthier, more sustainable tomorrow—one footprint at a time.
             </div>
             
-            <div class="col-one">
+            <div class="col-one-big">
                 <h3> Stakeholders</h3>
                 <p> We have 5 stakeholders that we prioritize</p>
                 <ol>
@@ -54,9 +54,8 @@
                 Investors and financial backers; success enhances returns on investment, making strategic decisions crucial for long-term profitability and business sustainability.</li>
             </ol>
             </div>
-            <div class="col-two"><img src="assets/icon.png" alt="Stakeholders"></div>
-            <div class="col-one"><img src="assets/SustainableDevelopmentGoalsLogo.svg.png" alt="SDG"
-                    class="smaller-img"></div>
+            <div class="col-two-small"><img src="assets/stakeholder.png" alt="Stakeholder" class="small-img"></div>
+            <div class="col-one"><img src="assets/SustainableDevelopmentGoalsLogo.svg.png" alt="SDG" class="small-img"></div>
             <div class="col-two">
                 <h3>How we calculate</h3>
                 <p> We calculate using these 12 Sustainable development goals</p>
