--- a/getStarted.html
+++ b/getStarted.html
@@ -28,14 +28,9 @@
                 <p> Empowering Change, One Footprint at a Time: Calculating Ecological Impact, Cultivating Positive Handprints. </p>
                 Welcome to Crossmarx, where sustainability meets empowerment for a greener world. As stewards of our planet, we understand that every action leaves a lasting imprint.
                 Our user-friendly tools empower individuals and businesses to assess their ecological footprint, providing insights into carbon emissions and resource consumption.
-                Yet, we go beyond calculations, inspiring the cultivation of positive "handprints"—actions actively
-                contributing to environmental restoration and conservation.
 
                 At Crossmarx, we believe in the transformative power of informed choices. Navigate your environmental impact, understand your carbon footprint,
                 and take meaningful steps towards a more sustainable lifestyle. Our platform serves as a hub for exploring possibilities and taking actionable measures for positive change.
-
-                Join us on the journey towards a brighter, more sustainable future. Take control of your impact, explore possibilities, and cultivate positive handprints. With Crossmarx,
-                you're not just calculating; you're actively participating in creating a healthier, more sustainable tomorrow—one footprint at a time.
             </div>
             
             <div class="col-one-big">
@@ -43,15 +38,15 @@
                 <p> We have 5 stakeholders that we prioritize</p>
                 <ol>
                 <li><em>Staff:</em>
-                Employees vital for operations; their satisfaction boosts productivity and innovation, fostering a positive work environment.</li>
+                Employees vital for operations; their satisfaction boost a positive work environment.</li>
                 <li><em>Supplier:</em>
-                Key partners providing resources; collaboration ensures quality materials, ethical practices, and reliable partnerships for sustainable business growth.</li>
+                Key partners providing resources and reliable partnerships for sustainable business growth.</li>
                 <li><em>Environment:</em>
-                Nature, impacted by business activities. Responsible practices minimize ecological footprint, fostering environmental conservation and sustainability.</li>
+                Responsible practices minimize ecological footprint, fostering environmental sustainability.</li>
                 <li><em>Clients:</em>
-                Customers driving business success; meeting needs and expectations builds trust, loyalty, and long-term relationships for mutual benefits.</li>
+                Customers drive business success; meeting needs and expectations builds trust, loyalty, and long-term relationships for mutual benefits.</li>
                 <li><em>Owners and Financiers:</em>
-                Investors and financial backers; success enhances returns on investment, making strategic decisions crucial for long-term profitability and business sustainability.</li>
+                success enhances returns on investment, making strategic decisions crucial for long-term profitability and business sustainability.</li>
             </ol>
             </div>
             <div class="col-two-small"><img src="assets/stakeholder.png" alt="Stakeholder" class="small-img"></div>
