--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
                 <img src="assets/icon.png" alt="Icon" class="icon">
             </div>
             <div class="content-hero">
-                <h2> Empower Your Business for Sustainability </h2>
-                Unlock comprehensive insights, track your environmental impact, and optimize your sustainability
-                strategies with the Crossmarx hand- footprint calculator. Tailored for businesses of all sizes, our user-friendly platform is
-                your key to a greener and more responsible future.
-                Why Choose Crossmarx hand- footprint calculator?
-
+                <h2> Why Choose Crossmarx hand- footprint calculator? </h2>
                 <ol>
                 <li>Comprehensive Insights</li>
                 <li>User-Friendly Interface</li>
