--- a/overview.html
+++ b/overview.html
@@ -18,8 +18,12 @@
             </ul>
         </nav>
     </header> 
-    <main>
-
+    <main class="card-container">
+            <div class="card">Card 1</div>
+            <div class="card">Card 2</div>
+            <div class="card">Card 3</div>
+            <div class="card">Card 4</div>
+            <div class="card">Card 5</div>
     </main>
 </body>
 </html>
