new page and shii

--- a/overview.html
+++ b/overview.html
@@ -12,18 +12,49 @@
         <nav>
             <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
             <ul>
-                <li> <a href="getStarted.html" class="new-user">Get started</a></li>
-                <li> <a href="overview.html">Overview</a></li>
+                <li> <a href="getStarted.html">Get started</a></li>
+                <li> <a href="overview.html" class="active-tab">Overview</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
         </nav>
+        <h1>The Score Of Each Individual Stakeholder</h1>
     </header> 
-    <main class="card-container">
-            <div class="card">Card 1</div>
-            <div class="card">Card 2</div>
-            <div class="card">Card 3</div>
-            <div class="card">Card 4</div>
-            <div class="card">Card 5</div>
+    <main>
+        <div class="intro-text">
+        We have put all your stakeholders side by so you can see their individual scores, if you wish to see them in more details or recalculate click on the button below.
+    </div>
+        <div class="card-container">
+            <div class="card">
+                Staff
+                <img src="assets/stakeholder.png" alt="" class="small-img">
+                score: <em> 3/5</em>
+                <a href="detail.html" class="click-me">Details</a>
+            </div>
+            <div class="card">
+                Supplier
+                <img src="assets/stakeholder.png" alt="" class="small-img">
+                score: <em> 3/5</em>
+                <a href="detail.html" class="click-me">Details</a>
+            </div>
+            <div class="card">
+                Environment
+                <img src="assets/stakeholder.png" alt="" class="small-img">
+                score: <em> 3/5</em>
+                <a href="detail.html" class="click-me">Details</a>
+            </div>
+            <div class="card">
+                Clients
+                <img src="assets/stakeholder.png" alt="" class="small-img">
+                score: <em> 3/5</em>
+                <a href="detail.html" class="click-me">Details</a>
+            </div>
+            <div class="card">
+                Owners and Financiers
+                <img src="assets/stakeholder.png" alt="" class="small-img">
+                score: <em> 3/5</em>
+                <a href="detail.html" class="click-me">Details</a>
+            </div>
+        </div>
     </main>
 </body>
 </html>
