--- a/calculator.html
+++ b/calculator.html
@@ -11,9 +11,9 @@
     <nav>
         <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
         <ul>
-            <li> <a href="getStarted.html" class="new-user">Get started</a></li>
+            <li> <a href="getStarted.html">Get started</a></li>
             <li> <a href="overview.html">Overview</a></li>
-            <li> <a href="calculator.html"> Calculate </a></li>
+            <li> <a href="calculator.html" class="active-tab"> Calculate </a></li>
         </ul>
     </nav>
     <main>
