--- a/getStarted.html
+++ b/getStarted.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
             <ul>
-                <li> <a href="getStarted.html" class="new-user">Get started</a></li>
+                <li> <a href="getStarted.html" class="active-tab">Get started</a></li>
                 <li> <a href="overview.html">Overview</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
