soort van calculatie
en wat andere geinige dingen

--- a/detail.html
+++ b/detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/overview.css">
     <title>Stakeholder details</title>
 </head>
 <body>
@@ -24,10 +25,26 @@
                 Staff
                 <img src="assets/stakeholder.png" alt="" class="small-img">
                 score: <em> 3/5</em>
-                <a href="detail.html" class="click-me">Details</a>
             </div>
-            <div class="card-2">
-                <div
+            <div class="card big">
+                <h3>Your top 5 customers</h3>
+                <ol>
+                    <li>Michel Vogler Score: <em>4/5</em>
+                        <a href="calculator.html" class="click-me inline">Calculate</a>
+                    </li>
+                    <li>John Doe Score: <em>4/5</em>
+                        <a href="calculator.html" class="click-me inline">Calculate</a>
+                    </li>
+                    <li>John Deed Score: <em>4/5</em>
+                        <a href="calculator.html" class="click-me inline">Calculate</a>
+                    </li>
+                    <li>Anna-Kyra achternaam Score: <em>4/5</em>
+                        <a href="calculator.html" class="click-me inline">Calculate</a>
+                    </li>
+                    <li>Ilona van Oosbree Score: <em>4/5</em>
+                        <a href="calculator.html" class="click-me inline">Calculate</a>
+                    </li>
+                </ol>
             </div>
         </section>
     </main>
