--- a/calculator.html
+++ b/calculator.html
@@ -21,7 +21,7 @@
             <article class="scorecard">
             <h3> Stakeholder</h3>
             <img src="assets/icon.png" alt="stakeholder" class="icon">
-            Score: <em> 3/5</em>
+            Score: <em id="score"> 3/5</em>
         </article>
         </section>
         <section class="questioncard">
