kleine fixes voor presentatie morge

--- a/getStarted.html
+++ b/getStarted.html
@@ -56,7 +56,7 @@
                 <p> We calculate using these 12 Sustainable development goals</p>
                 <img src="assets/Sustainable_Development_Goals.svg.png" alt="SDG">
             </div>
-            <a href="calculator.html" class="click-me full"> Start calculating! </a>
+            <a href="overview.html" class="click-me full"> Start calculating! </a>
         </section>
     </main>
 </body>
