--- a/calculator.html
+++ b/calculator.html
@@ -17,14 +17,14 @@
         </ul>
     </nav>
     <main>
-        <section class="background-scorecard">
+        <section>
             <article class="scorecard">
             <h3> Stakeholder</h3>
-            <img src="assets/icon.png" alt="stakeholder" class="icon">
-            Score: <em id="score"> 3/5</em>
+            <img src="assets/stakeholder.png" alt="stakeholder" class="icon">
+            <p>Michel Vogler </p>
+            Here we have the score of the stakeholder. 
+            <em id="score"> Score: 3/5</em>
         </article>
-        </section>
-        <section class="questioncard">
             <div class="card" id="card1">
                 <fieldset>
                     <legend>Hoe groot is het CO2 uitstoot van uw bedrijf?</legend>
